--- a/themes/hyde/layouts/partials/head.html
+++ b/themes/hyde/layouts/partials/head.html
@@ -15,11 +15,11 @@
   {{- end }}
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/style.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/print.css" media="print">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/poole.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/syntax.css">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/hyde.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/print.css" media="print">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/poole.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/hyde.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
   <!-- Icons -->
